--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,12 +2,14 @@ site_name: Documentation Template
 
 nav:
     - About: index.md
+    - GNPS2 Workflow Development: workflowdev.md
     
 theme:
     name: material
     palette:
         primary: '#003DA5'
         accent: '#FFB81C'
+    custom_dir: overrides
 
 extra:
     social:
@@ -28,5 +30,4 @@ markdown_extensions:
 
 extra:
   analytics:
-    provider: google
-    property: XXX
+    provider: umami
