--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: GNPS2 Documentation
 site_url: https://wang-bioinformatics-lab.github.io/GNPS2_Documentation/
 edit_uri: https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/edit/master/docs/
-repo_name: CCMS-UCSD/GNPSDocumentation
+repo_name: Wang-Bioinformatics-Lab/GNPS2_Documentation
 repo_url: https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation
 
 nav:
@@ -20,6 +20,8 @@ theme:
         primary: '#003DA5'
         accent: '#FFB81C'
     custom_dir: overrides
+    features:
+      - content.action.edit
 
 extra:
     social:
