--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
     - GNPS2 API: api.md
     - IDBac Documentation: idbac.md
     - Join the GNPS2 community: community.md
+    - Accounts: accounts.md
     
 theme:
     name: material
