--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
     - Mass Spec File Conversion: fileconversion.md
     - GNPS2 Workflow Development: workflowdev.md
     - GNPS2 Tool Index: toolindex.md
+    - GNPS2 Workflows: workflowindex.md
     - GNPS2 USI: usi.md
     - GNPS2 API: api.md
     - IDBac Documentation: idbac.md
