--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
         pip install -r requirements.txt
     - name: Test Build
       run: |
-        mkdocs build -s
+        mkdocs build
