--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,9 @@ nav:
     - About: index.md
     - Server Status: status.md
     - File Upload: fileupload.md
-    - Mass Spec File Conversion: fileconversion.md
+    - Mass Spec File Conversion: 
+        File Conversion: fileconversion.md
+        Agilent: agilent_conversion.md
     - GNPS2 Workflow Development: workflowdev.md
     - GNPS2 Tool Index: toolindex.md
     - GNPS2 Workflows: workflowindex.md
@@ -20,7 +22,7 @@ nav:
         - Raw Bruker Data Conversion: idbacrawconversion.md
         - mzXML to mzML Conversion: idbacmzxmlconversion.md
     FBMN:
-        Agilent: agilent.md
+        Agilent: agilent_fbmn.md
        
     - Join the GNPS2 community: community.md
     - Accounts: accounts.md
