--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,6 @@ nav:
     - GNPS2 Tool Index: toolindex.md
     - GNPS2 Workflows: workflowindex.md
     - GNPS2 USI: usi.md
-    - GNPS2 API: api.md
     - IDBac:
         - IDBac Database Depositions: idbacdepositions.md
         - IDBac Analysis: idbacanalysis.md
@@ -23,6 +22,7 @@ nav:
         - mzXML to mzML Conversion: idbacmzxmlconversion.md
     - FBMN:
         Agilent: agilent_fbmn.md
+    - API: api.md
     - Join the GNPS2 community: community.md
     - Accounts: accounts.md
     - Contact/Office Hours: contact.md
