--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
             Agilent: agilent_fbmn.md
         - Classical Molecular Networking: classical.md
     - GNPS2 Dataset Explorer: gnpsdatasetexplorer.md
+    - GNPS2 Quickstart2: quickstart2.md
     - API: api.md
     - Logos: logo.md
     - GNPS2 Workflow Development: workflowdev.md
