--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ nav:
     - Server Status: status.md
     - Accounts: accounts.md
     - FAQ: faq.md
-    - GNPS2 Interface
+    - GNPS2 Interface:
         - GNPS2 Tasks: workflowtasks.md
     - Data Reanalysis: datareanalysis.md
     - Data Preparation/Upload:
