--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ nav:
     - IDBac:
         - IDBac Database Depositions: idbacdepositions.md
         - IDBac Protein Analysis: idbacanalysis.md
-        - IDBac Small Molecule Analysis: idbacsmanalysis.md
+        - IDBac Small Molecule Analysis: idbacsmallmolanalysis.md
         - Raw Bruker Data Conversion: idbacrawconversion.md
         - mzXML to mzML Conversion: idbacmzxmlconversion.md
     - Tandem Mass Spectrometry Data Analysis:
