--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
     - GNPS2 Quickstart2: quickstart2.md
     - API: api.md
     - Logos: logo.md
+    - GNPS2 Workshops: workshops.md
     - GNPS2 Workflow Development: workflowdev.md
     - Join the GNPS2 community: community.md
     - Contact/Office Hours: contact.md
