--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,7 +34,7 @@ nav:
         - FBMN:
             - FBMN: fbmn.md
             - Agilent: agilent_fbmn.md
-            - Progenesisi: FBMN-with-progenesisQI.md
+            - Progenesis: FBMN-with-progenesisQI.md
             - Protocols for FBMN:
                 - Step by Step Protocols for Progenesis Data: protocol_FBMN_Progenesis_Overlay.md
         - ModiFinder: modifinder.md
