--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
         - Data Conversion - Raw Bruker: idbacrawconversion.md
         - Data Conversion - non Bruker: idbacmsconvertfilemerger.md
         - Data Conversion - mzXML to mzML: idbacmzxmlconversion.md
+        - IDBac Office Hours: idbacofficehours.md
     - Tandem Mass Spectrometry Data Analysis:
         - Classical Molecular Networking: classical.md
         - FBMN:
