--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - Analysis Workflow Index: workflowindex.md
     - GNPS2 USI: usi.md
     - IDBac:
+        - Start Here: start-here.md 
         - Request an Account: idbac-request-an-account.md
         - Office Hours: idbacofficehours.md
         - Database Depositions: idbacdepositions.md
