--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,7 +67,7 @@ theme:
     custom_dir: overrides
     features:
       - content.action.edit
-
+    
 extra:
     social:
         - type: 'github'
@@ -77,6 +77,9 @@ plugins:
     - search
     - git-revision-date-localized:
         type: datetime
+    - mermaid2
+    - glightbox
+
 
 markdown_extensions:
     - toc:
