--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,7 +90,12 @@ markdown_extensions:
         permalink: true
     - admonition
     - pymdownx.details
-    - pymdownx.superfences
+    - pymdownx.superfences:
+        # make exceptions to highlighting of code:
+        custom_fences:
+            - name: mermaid
+              class: mermaid
+              format: !!python/name:mermaid2.fence_mermaid
 
 extra:
   analytics:
