--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ nav:
     - IDBac:
         - Request an Account: idbac-request-an-account.md
         - Office Hours: idbacofficehours.md
-        - START HERE with Raw Bruker Data: idbac-brukerstart-here.md
+        - START HERE- Raw Bruker Data: idbac-brukerstart-here.md
         - Database Depositions: idbacdepositions.md
         - Sumbit Data for Analysis: idbacsumbmitdata.md
         - Analysis Platform: idbacanalysisplatform.md
