--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,10 +25,10 @@ nav:
     - IDBac:
         - Request an Account: idbac-request-an-account.md
         - Office Hours: idbacofficehours.md
-        - START HERE- Raw Bruker Data: idbac-brukerstart-here.md
-        - Database Depositions: idbacdepositions.md
-        - Sumbit Data for Analysis: idbacsumbmitdata.md
-        - Analysis Platform: idbacanalysisplatform.md
+        - START HERE- Raw Bruker data: idbac-brukerstart-here.md
+        - Submit to the IDBAc database: idbacdepositions.md
+        - Analyze your data: idbacsumbmitdata.md
+        - Analysis platform: idbacanalysisplatform.md
         - Data Conversion - non Bruker: idbacmsconvertfilemerger.md
         - Data Conversion - mzXML to mzML: idbacmzxmlconversion.md
         
