--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ nav:
         - Request an Account: idbac-request-an-account.md
         - Office Hours: idbacofficehours.md
         - START HERE- Raw Bruker data: idbac-brukerstart-here.md
-        - Contribute to the IDBac database: idbacdepositions.md
+        - Contribute to the database: idbacdepositions.md
         - Analyze your data: idbacsumbmitdata.md
         - Analysis platform: idbacanalysisplatform.md
         - Data Conversion - non Bruker: idbacmsconvertfilemerger.md
