--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ nav:
         - START HERE- Raw Bruker data: idbac-brukerstart-here.md
         - START HERE- Raw non-Bruker data: idbacnewnonbruker.md
         - Contribute to the database: idbacdepositions.md
-        - Analyze your data: idbacsumbmitdata.md
+        - Analyze your data: idbacanalyzeyourdata.md
         - Analysis platform: idbacanalysisplatform.md
         
         
