updated the modifinder docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,9 +42,9 @@ nav:
             - Protocols for FBMN:
                 - Step by Step Protocols for Progenesis Data: protocol_fbmn_progenesis_overlay.md
         - ModiFinder: 
-            - modifinder.md
-            - modifinder-web.md
-            - modifinder-workflow.md
+            - ModiFinder: modifinder.md
+            - GNPS2 Interactive Web Interface: modifinder-web.md
+            - High-Throughput Workflow: modifinder-workflow.md
         - Networking Overlay: Networkingoverlay.md
         - Network Topology - Transitive Alignments: transitive.md
         - Multiple Spectrum Alignment: mmsa.md
